Still need to adjust the currRow variable for the previous index too